MM crash on add_sms_part
The release in which this crash happend, had every commit until 8755e85d
Thread 0(id: 6282) CRASHED [ SIGSEGV /0x00000000@0x0000000000000008 ]
0x00005c8193b53a56 (ModemManager - mm-broadband-modem-mbim.c: 6068) add_sms_part
0x00005c8193b5a830 (ModemManager - mm-broadband-modem-mbim.c: 6101) sms_read_query_ready
0x00007c589161f785 (libgio-2.0.so.0 - gtask.c: 1219) g_task_return_now
0x00007c589161e7e4 (libgio-2.0.so.0 - gtask.c: 1289) g_task_return
0x00007c58916c7c09 (libmbim-glib.so.4 - mbim-device.c: 229) transaction_task_complete_and_free
0x00007c58916c94ad (libmbim-glib.so.4 - mbim-device.c: 922) data_available
0x00007c58914d7546 (libglib-2.0.so.0 - gmain.c: 3337) g_main_context_dispatch
0x00007c58914d7851 (libglib-2.0.so.0 - gmain.c: 4131) g_main_context_iterate
0x00007c58914d7acd (libglib-2.0.so.0 - gmain.c: 4329) g_main_loop_run
0x00005c8193ae6b10 (ModemManager - main.c: 216) main
0x00007c589127be04 (libc.so.6) __libc_start_main
0x00005c8193ae6929 (ModemManager) _start
0x00007ffe622247a7
I wonder if the error is not set in mm_modem_charset_bytearray_to_utf8
, when utf8 && g_utf8_validate (utf8, -1, NULL)
is false
Edited by Andrew Lassalle